# darcyai

./: .gitignore  .pycodestyle  .pylintrc  BUILD.md  DARCY_EXPLORER.md  DEPLOY.md  Dockerfile  GETTINGSTARTED.md  GETTING_STARTED.md  HOME.md  LICENSE  MANIFEST.in  README.md  SETUP_JETSON.md  SETUP_MACOS.md  SETUP_RPI.md  TERMINOLOGY.md  apidocs.bash  azure-pipelines.yaml  azure-pipeliones.yaml  bump_version.bash  e2e-test-template.yaml  pydoc-markdown.yml  release.bash  requirements.txt  setup.cfg  setup.py  setup_darcyai_m1.bash  workspace.code-workspace
.assets/snippets/: 1_imports.py  2_1_initialize_input.py  2_2_initialize_pipeline.py  2_2_initialize_pipeline_output.py  2_3_initialize_output.py  3_output_callback.py  4_init_perceptor.py  5_add_perceptor.py  (+5 more)
.githooks/: pre-push
docker/: .gitignore  azure-pipelines.yml  docker-task-template.yml
docs/: 404.html  index.html  search.html  sitemap.xml
docs.md/: BUILD.md  DARCY_EXPLORER.md  DEPLOY.md  GETTING_STARTED.md  HOME.md  PACKAGE.md  SETUP_WINDOWS.md  TERMINOLOGY.md
src/: Dockerfile  coral_people_detector.py  coral_simple_custom_classifier.py  coral_simple_image_classification.py  coral_simple_object_detection.py  cpu_simple_image_classification.py  cpu_simple_object_detection.py  custom_perception.py  multi_stream.py  multiple_perceptors.py  no_perception.py  people.py  people_detector.py  people_perception.py  qrcode_detection.tflite  sample_input_stream.py  sample_output_stream.py  simple_image_classification.py  simple_object_detection.py  single_stream.py  video_file.py  video_output_stream.py
(+212 files in other folders)
