[bumpversion]
current_version = 2.0.3
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+)\.(\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:part:build]

[bumpversion:file:./src/darcyai/__init__.py]

[metadata]
version = attr: darcyai.__version__
license_files = LICENSE
